# gatewayDemo/docs/swagger.yaml
@@ -1,4 +1,142 @@
 definitions:
+  dao.ServiceAccessControl:
+    properties:
+      black_list:
+        type: string
+      clientip_flow_limit:
+        type: integer
+      id:
+        type: integer
+      open_auth:
+        type: integer
+      service_flow_limit:
+        type: integer
+      service_id:
+        type: integer
+      white_host_home:
+        type: string
+      white_list:
+        type: string
+    type: object
+  dao.ServiceDetail:
+    properties:
+      access_control:
+        $ref: '#/definitions/dao.ServiceAccessControl'
+      grpc:
+        $ref: '#/definitions/dao.ServiceGRPCRule'
+      http:
+        $ref: '#/definitions/dao.ServiceHTTPRule'
+      info:
+        $ref: '#/definitions/dao.ServiceInfo'
+      load_balance:
+        $ref: '#/definitions/dao.ServiceLoadBalance'
+      tcp:
+        $ref: '#/definitions/dao.ServiceTCPRule'
+    type: object
+  dao.ServiceGRPCRule:
+    properties:
+      header_transfor:
+        type: string
+      id:
+        type: integer
+      port:
+        type: integer
+      service_id:
+        type: integer
+    type: object
+  dao.ServiceHTTPRule:
+    properties:
+      header_transfor:
+        type: string
+      id:
+        type: integer
+      need_https:
+        type: integer
+      need_strip_uri:
+        type: integer
+      need_websocket:
+        type: integer
+      rule:
+        type: string
+      rule_type:
+        type: integer
+      service_id:
+        type: integer
+      url_rewrite:
+        type: string
+    type: object
+  dao.ServiceInfo:
+    properties:
+      create_at:
+        type: string
+      id:
+        type: integer
+      is_delete:
+        type: integer
+      load_type:
+        type: integer
+      service_desc:
+        type: string
+      service_name:
+        type: string
+      update_at:
+        type: string
+    type: object
+  dao.ServiceLoadBalance:
+    properties:
+      check_interval:
+        type: integer
+      check_method:
+        type: integer
+      check_timeout:
+        type: integer
+      forbid_list:
+        type: string
+      id:
+        type: integer
+      ip_list:
+        type: string
+      round_type:
+        type: integer
+      service_id:
+        type: integer
+      upstream_connect_timeout:
+        type: integer
+      upstream_header_timeout:
+        type: integer
+      upstream_idle_timeout:
+        type: integer
+      upstream_max_idle:
+        type: integer
+      weight_list:
+        type: string
+    type: object
+  dao.ServiceTCPRule:
+    properties:
+      id:
+        type: integer
+      port:
+        type: integer
+      service_id:
+        type: integer
+    type: object
+  dto.AdminInfoOutput:
+    properties:
+      avator:
+        type: string
+      id:
+        type: integer
+      introduction:
+        type: string
+      login_time:
+        type: string
+      name:
+        type: string
+      roles:
+        items:
+          type: string
+        type: array
+    type: object
   dto.AdminLoginInput:
     properties:
       password:
@@ -39,6 +177,31 @@ definitions:
     - app_id
     - name
     type: object
+  dto.AppDeleteInput:
+    properties:
+      id:
+        description: 自增ID
+        type: integer
+    required:
+    - id
+    type: object
+  dto.AppListInput:
+    properties:
+      info:
+        description: 关键词
+        type: string
+      page_no:
+        description: 页数
+        example: 1
+        type: integer
+      page_size:
+        description: 每页条数
+        example: 20
+        type: integer
+    required:
+    - page_no
+    - page_size
+    type: object
   dto.AppUpdateInput:
     properties:
       app_id:
@@ -72,6 +235,36 @@ definitions:
     required:
     - originpassword
     - password
+    type: object
+  dto.DashServiceStatListOutput2:
+    properties:
+      name:
+        type: string
+      value:
+        description: LoadType int    `json:"load_type"`
+        type: integer
+    type: object
+  dto.DashServiceStatOutput:
+    properties:
+      data:
+        items:
+          $ref: '#/definitions/dto.DashServiceStatListOutput2'
+        type: array
+      legend:
+        items:
+          type: string
+        type: array
+    type: object
+  dto.PanelGroupDataOutput:
+    properties:
+      app_num:
+        type: integer
+      current_qps:
+        type: integer
+      service_num:
+        type: integer
+      today_request_num:
+        type: integer
     type: object
   dto.ServiceAddGRPCInput:
     properties:
@@ -262,6 +455,36 @@ definitions:
     - service_desc
     - service_name
     - weight_list
+    type: object
+  dto.ServiceListInput:
+    properties:
+      info:
+        description: 关键词
+        type: string
+      page_no:
+        description: 页数
+        example: 1
+        type: integer
+      page_size:
+        description: 每页条数
+        example: 20
+        type: integer
+    required:
+    - page_no
+    - page_size
+    type: object
+  dto.ServiceStatOutput:
+    properties:
+      today:
+        description: 今日统计结果
+        items:
+          type: integer
+        type: array
+      yesterday:
+        description: 昨日统计结果
+        items:
+          type: integer
+        type: array
     type: object
   dto.ServiceUpdateGRPCInput:
     properties:
@@ -497,7 +720,6 @@ definitions:
     type: object
 info:
   contact: {}
-  license: {}
 paths:
   /admin_info/changepwd:
     post:
@@ -518,7 +740,12 @@ paths:
         "200":
           description: success
           schema:
-            $ref: '#/definitions/middleware.Response'
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/dto.ChangePWDInput'
+              type: object
       summary: 管理员密码修改
       tags:
       - 管理员接口
@@ -541,7 +768,12 @@ paths:
         "200":
           description: success
           schema:
-            $ref: '#/definitions/middleware.Response'
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/dto.AdminInfoOutput'
+              type: object
       summary: 管理员信息
       tags:
       - 管理员接口
@@ -564,7 +796,12 @@ paths:
         "200":
           description: success
           schema:
-            $ref: '#/definitions/middleware.Response'
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/dto.AdminLoginInput'
+              type: object
       summary: 管理员登录
       tags:
       - 管理员接口
@@ -580,7 +817,12 @@ paths:
         "200":
           description: success
           schema:
-            $ref: '#/definitions/middleware.Response'
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/dto.AdminLoginInput'
+              type: object
       summary: 管理员退出
       tags:
       - 管理员接口
@@ -603,7 +845,12 @@ paths:
         "200":
           description: success
           schema:
-            $ref: '#/definitions/middleware.Response'
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/dto.AppAddInput'
+              type: object
       summary: 添加租户
       tags:
       - 租户管理
@@ -625,7 +872,12 @@ paths:
         "200":
           description: success
           schema:
-            $ref: '#/definitions/middleware.Response'
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  type: string
+              type: object
       summary: 租户删除
       tags:
       - 租户管理
@@ -647,7 +899,12 @@ paths:
         "200":
           description: success
           schema:
-            $ref: '#/definitions/middleware.Response'
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/dto.AppDeleteInput'
+              type: object
       summary: 租户信息
       tags:
       - 租户管理
@@ -678,7 +935,12 @@ paths:
         "200":
           description: success
           schema:
-            $ref: '#/definitions/middleware.Response'
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/dto.AppListInput'
+              type: object
       summary: 租户列表
       tags:
       - 租户管理
@@ -700,7 +962,12 @@ paths:
         "200":
           description: success
           schema:
-            $ref: '#/definitions/middleware.Response'
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  type: string
+              type: object
       summary: 租户统计
       tags:
       - 租户管理
@@ -723,7 +990,12 @@ paths:
         "200":
           description: success
           schema:
-            $ref: '#/definitions/middleware.Response'
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/dto.AppUpdateInput'
+              type: object
       summary: 租户更新
       tags:
       - 租户管理
@@ -739,7 +1011,12 @@ paths:
         "200":
           description: success
           schema:
-            $ref: '#/definitions/middleware.Response'
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/dto.ServiceStatOutput'
+              type: object
       summary: 流量统计
       tags:
       - 大盘
@@ -755,7 +1032,12 @@ paths:
         "200":
           description: success
           schema:
-            $ref: '#/definitions/middleware.Response'
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/dto.PanelGroupDataOutput'
+              type: object
       summary: 指标统计
       tags:
       - 大盘
@@ -771,7 +1053,12 @@ paths:
         "200":
           description: success
           schema:
-            $ref: '#/definitions/middleware.Response'
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/dto.DashServiceStatOutput'
+              type: object
       summary: 服务统计
       tags:
       - 大盘rest
@@ -794,7 +1081,12 @@ paths:
         "200":
           description: success
           schema:
-            $ref: '#/definitions/middleware.Response'
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/dto.ServiceAddHTTPInput'
+              type: object
       summary: 添加GRPC服务
       tags:
       - 服务管理
@@ -817,7 +1109,12 @@ paths:
         "200":
           description: success
           schema:
-            $ref: '#/definitions/middleware.Response'
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/dto.ServiceAddHTTPInput'
+              type: object
       summary: 添加HTTP服务
       tags:
       - 服务管理
@@ -840,7 +1137,12 @@ paths:
         "200":
           description: success
           schema:
-            $ref: '#/definitions/middleware.Response'
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/dto.ServiceAddTCPInput'
+              type: object
       summary: 添加TCP服务
       tags:
       - 服务管理
@@ -862,7 +1164,12 @@ paths:
         "200":
           description: success
           schema:
-            $ref: '#/definitions/middleware.Response'
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  type: string
+              type: object
       summary: 服务删除
       tags:
       - 服务管理
@@ -884,7 +1191,12 @@ paths:
         "200":
           description: success
           schema:
-            $ref: '#/definitions/middleware.Response'
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/dao.ServiceDetail'
+              type: object
       summary: 服务信息
       tags:
       - 服务管理
@@ -915,7 +1227,12 @@ paths:
         "200":
           description: success
           schema:
-            $ref: '#/definitions/middleware.Response'
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/dto.ServiceListInput'
+              type: object
       summary: 服务列表
       tags:
       - 服务管理
@@ -937,7 +1254,12 @@ paths:
         "200":
           description: success
           schema:
-            $ref: '#/definitions/middleware.Response'
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/dto.ServiceStatOutput'
+              type: object
       summary: 服务统计
       tags:
       - 服务管理
@@ -960,7 +1282,12 @@ paths:
         "200":
           description: success
           schema:
-            $ref: '#/definitions/middleware.Response'
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/dto.ServiceUpdateGRPCInput'
+              type: object
       summary: 修改GRPC服务
       tags:
       - 服务管理
@@ -983,7 +1310,12 @@ paths:
         "200":
           description: success
           schema:
-            $ref: '#/definitions/middleware.Response'
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/dto.ServiceUpdateHTTPInput'
+              type: object
       summary: 修改HTTP服务
       tags:
       - 服务管理
@@ -1006,7 +1338,12 @@ paths:
         "200":
           description: success
           schema:
-            $ref: '#/definitions/middleware.Response'
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/dto.ServiceUpdateTCPInput'
+              type: object
       summary: 修改TCP服务
       tags:
       - 服务管理
