# gatewayDemo/dto/dashboard.go
@@ -8,12 +8,18 @@ type PanelGroupDataOutput struct {
 }
 
 type DashServiceStatListOutput struct {
-	Name     string `json:"name"`
-	LoadType int    `json:"load_type"`
-	Value    int64  `json:"value"`
+	// Name     string `json:"name"`
+	LoadType int   `json:"load_type"`
+	Value    int64 `json:"value"`
+}
+
+type DashServiceStatListOutput2 struct {
+	Name string `json:"name"`
+	// LoadType int    `json:"load_type"`
+	Value int64 `json:"value"`
 }
 
 type DashServiceStatOutput struct {
-	Legend []string                    `json:"legend"`
-	Data   []DashServiceStatListOutput `json:"data"`
+	Legend []string                     `json:"legend"`
+	Data   []DashServiceStatListOutput2 `json:"data"`
 }
